# rmbg-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  package.json
.github/workflows/: ci.yml  release.yml
npm/lib/: platform.js
npm/scripts/: check-versions.js
npm/tests/: installer.test.js  packaging.test.js  platform.test.js
runtime/: pyproject.toml  rmbg_runtime.py
runtime/tests/: test_runtime.py
src/: cli.rs  detector.rs  io.rs  main.rs  processor.rs  runtime.rs  ui.rs
tests/: integration.rs
tests/common/: mod.rs
