[package]
name = "rmbg-cli"
version = "0.4.0"
edition = "2021"
description = "Remove image backgrounds locally with BRIA RMBG-2.0"
license = "MIT"
repository = "https://github.com/shayyz-code/rmbg-cli"
readme = "README.md"

[[bin]]
name = "rmbg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
