[project]
name = "rmbg-runtime"
version = "0.3.0"
description = "Private Transformers runtime for rmbg-cli"
requires-python = ">=3.10,<3.13"
dependencies = [
    "kornia>=0.7,<1",
    "pillow>=10,<12",
    "timm>=1,<2",
    "torch>=2.4,<3",
    "torchvision>=0.19,<1",
    "transformers>=4.49,<5",
]

[tool.uv]
package = false
